--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-/* style.css */
-
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
     margin: 0;
     padding: 0;
     background-color: #ffffff;
@@ -117,8 +118,6 @@ header .nav-bar ul li a#activeTab {
     color: #ff6347;
 }
 
-/* Responsive design */
-
 @media (max-width: 768px) {
     header {
         flex-direction: column;
@@ -137,7 +136,6 @@ header .nav-bar ul li a#activeTab {
         text-align: center;
     }
 }
-
 
 .highlighted-section {
     background-color: beige;
@@ -309,4 +307,50 @@ header .nav-bar ul li a#activeTab {
 
 .footer .socials a:hover {
     color: #ff6347;
+}
+
+.contact-form {
+    background-color: beige;
+    margin-left: 28rem;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    width: 100%;
+    text-align: center;
+}
+
+.contact-form form {
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-form label {
+    font-size: 1em;
+    margin-bottom: 5px;
+    text-align: left;
+}
+
+.contact-form input[type="text"] {
+    padding: 10px;
+    font-size: 1em;
+    margin-bottom: 20px;
+    border: 1px solid #dddddd;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1) inset;
+}
+
+.contact-form input[type="submit"] {
+    padding: 10px;
+    font-size: 1em;
+    color: #ffffff;
+    background-color: #333333;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.contact-form input[type="submit"]:hover {
+    background-color: #ff6347;
 }
